# u5

stm32u575/: .devcontainer.json  Cargo.toml
stm32u575/src/: device.x
u5core/: .devcontainer.json  Cargo.toml  memory.x  openocd.cfg
u5core/.cargo/: config.toml
u5core/src/: main.rs
